--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@
   font-family: "Noto Sans Display", sans-serif;
 }
 
+body{
+  overflow-x: hidden;
+}
+
 
 
 input[type=number]::-webkit-inner-spin-button, 
